--- a/PropertyList.Data/PropertyList.Data.csproj
+++ b/PropertyList.Data/PropertyList.Data.csproj
@@ -49,7 +49,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Model\PropertyList.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -64,6 +63,9 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>PropertyList.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\usp_SelectAllProperties_Result.cs">
+      <DependentUpon>PropertyList.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\utProperty.cs">
       <DependentUpon>PropertyList.tt</DependentUpon>
