--- a/PropertyList.BusinessLogic/PropertyList.BusinessLogic.csproj
+++ b/PropertyList.BusinessLogic/PropertyList.BusinessLogic.csproj
@@ -47,12 +47,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Constant\ConfigKeys.cs" />
+    <Compile Include="Constant\PropertyStatus.cs" />
+    <Compile Include="Constant\StaffType.cs" />
+    <Compile Include="Model\LoginDtoModel.cs" />
+    <Compile Include="Model\PropertyDtoModel.cs" />
+    <Compile Include="Model\StaffDtoModel.cs" />
+    <Compile Include="Model\UserDtoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\IPropertyProvider.cs" />
+    <Compile Include="Providers\IStaffProvider.cs" />
+    <Compile Include="Providers\PropertyProvider.cs" />
+    <Compile Include="Providers\StaffProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PropertyList.Data\PropertyList.Data.csproj">
+      <Project>{d6272a6e-2577-4393-b4cf-f8b4d8db9259}</Project>
+      <Name>PropertyList.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
