update view controller and api controller. update business logic.

--- a/PropertyList/Web.config
+++ b/PropertyList/Web.config
@@ -13,6 +13,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ApplicationUri" value="http://propertylist.localhost/" />
   </appSettings>
   <connectionStrings>
     <add name="PropertyListing_DevEntities" connectionString="metadata=res://*/Model.PropertyList.csdl|res://*/Model.PropertyList.ssdl|res://*/Model.PropertyList.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=PropertyListing_Dev;user id=dev;password=pass.1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
