--- a/PropertyList.Data/PropertyList.Data.csproj
+++ b/PropertyList.Data/PropertyList.Data.csproj
@@ -67,10 +67,13 @@
     <Compile Include="Model\usp_CheckStaffAccount_Result.cs">
       <DependentUpon>PropertyList.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\usp_GetPropertyById_Result.cs">
+    <Compile Include="Model\usp_GetAllProperties_Result.cs">
       <DependentUpon>PropertyList.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\usp_SelectAllProperties_Result.cs">
+    <Compile Include="Model\usp_GetAllRoles_Result.cs">
+      <DependentUpon>PropertyList.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\usp_GetPropertyById_Result.cs">
       <DependentUpon>PropertyList.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\utProperty.cs">
@@ -83,6 +86,8 @@
       <DependentUpon>PropertyList.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitOfWork\IUnitOfWork.cs" />
+    <Compile Include="UnitOfWork\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
