--- a/PropertyList/Views/Web.config
+++ b/PropertyList/Views/Web.config
@@ -25,8 +25,15 @@
   <appSettings>
     <add key="webpages:Enabled" value="false" />
   </appSettings>
-
+  <!--
   <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="403" />
+      <error statusCode="403" responseMode="ExecuteURL" path="/Error/UnAuthorized" />
+    </httpErrors>
+  </system.webServer>
+  -->
+  <system.webServer>  
     <handlers>
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
