--- a/PropertyList/PropertyList.csproj
+++ b/PropertyList/PropertyList.csproj
@@ -201,6 +201,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\PropertyListing_Dev.mdf" />
+    <Content Include="App_Data\PropertyListing_Dev_log.ldf" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -252,9 +254,7 @@
     <Content Include="Views\Property\EditSalesAdmin.cshtml" />
     <Content Include="Views\Error\UnAuthorized.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
