--- a/PropertyList/Web.config
+++ b/PropertyList/Web.config
@@ -18,6 +18,14 @@
   <connectionStrings>
     <add name="PropertyListing_DevEntities" connectionString="metadata=res://*/Model.PropertyList.csdl|res://*/Model.PropertyList.ssdl|res://*/Model.PropertyList.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=PropertyListing_Dev;user id=dev;password=pass.1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+
+  <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="403" />
+      <error statusCode="403" responseMode="ExecuteURL" path="/Error/UnAuthorized" />
+    </httpErrors>
+  </system.webServer>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
